// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback should match snapshot 1`] = `
<div>
  <div
    className="feedback-overlay"
  >
    <article
      className="feedback-box"
    >
      <div>
        <p
          className="correct-feedback"
        >
          Correct!
        </p>
        <p
          className="sub-feedback"
        >
          Nailed it - On to the next!
        </p>
      </div>
       
      <p
        className="learn-more"
      >
        Learn more 
        <a>
          At MDN
        </a>
      </p>
      <button
        className="next-btn"
        onClick={[MockFunction]}
      >
        Return
      </button>
    </article>
  </div>
</div>
`;

exports[`Feedback should match snapshot 2`] = `
<div>
  <div
    className="feedback-overlay"
  >
    <article
      className="feedback-box"
    >
       
      <div>
        <p
          className="incorrect-feedback"
        >
          Sorry - Incorrect!
        </p>
        <p
          className="sub-feedback"
        >
          Check out the below link for review. If you visit this quiz later, see the review section on the bottom of the page to try this one again.
        </p>
      </div>
      <p
        className="learn-more"
      >
        Learn more 
        <a>
          At MDN
        </a>
      </p>
      <button
        className="next-btn"
        onClick={[MockFunction]}
      >
        Return
      </button>
    </article>
  </div>
</div>
`;
